Corrected stuff and improved description

--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -30,10 +30,9 @@
 % personal data
 \name{Adrian}{Garcia Garcia}
 \title{Curriculum vitae}                               % optional, remove / comment the line if not wanted
-\address{C/Diligencia 4, D 4ºB}{28018 Madrid}{Spain}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{639570909}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
-\email{adriagar@ucm.es}                               % optional, remove / comment the line if not wanted
+\email{mizadri.gg@gmail.com}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
 \social[linkedin]{mizadri}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
@@ -59,29 +58,37 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
+\section{Description} I am a highly curious and passion driven individual that is always looking to grow as a professional and as a person. My dream job offers interesting technical challenges that are faced through teamwork and allow me to learn new technologies, where my researching and learning skills could be useful. No matter the place I can find a way there, specially if the software we create actually makes a difference.
+
 \section{Education}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
-\cventry{2016--Now}{Master's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Current average: 9,12.} {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgNFNnQnNJeVNxT00}{Academic Report}}}{}
+\cventry{2017--2021}{PhD in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{cum laude mention} {\color{blue}\href{https://drive.google.com/file/d/1WwCfr2Mp8xMYrpEOq5sLz3ep9YLhmNLN/view?usp=sharing}{Thesis manuscript}}}{}
+\cventry{2016--2018}{Master's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Current average: 9,12.} {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgNFNnQnNJeVNxT00}{Academic Report}}}{}
 \cventry{2011--2016}{Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{\textit{Average: 7,82 over 10.} {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgUzllSEpXd1BSLWc}{Academic Report}}}{} % arguments 3 to 6 can be left empty
 
 \section{Employment history}
 % \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{Feb.-Jun. (2017)}{System Administrator}{Department of Compuer Architecture and Automatics}{Madrid}{}{Administrated multiple Linux systems and maintained the physical and virtualized infraestructure (kvm).}
-\cventry{Nov. 2016}{Seven months in a colaboration fellowship with university departments}{Department of Computer Architecture and Automatics}{Madrid}{}{Studied and developed a Linux kernel scheduler aware of the effects of shared-resource contention in asymmetric multicore systems. Awarded by the Spanish Ministry of Education, Culture and Sport.}
-\cventry{Sept. 2016}{Developed and deployed a custom Wordpress installation for a Spanish political party {\color{blue}\href{www.ahoraarganda.es}{(link)}}}{}{}{}{}
-\cventry{Apr.-Aug. (2016)}{Internship in Software Developement}{SATEC}{Madrid}{}{Developed web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application for the government car management system.}
+\cventry{Apr'18-Dec'21}{PhD scolarship (UCM)}{Department of Compuer Architecture and Automatics}{Madrid}{}{"Contention-aware scheduling and resource management for emerging multicore architectures": the main proposals were implemented in C Linux kernel modules, but most of the experimental analysis and performance metrics was done in python (pandas/matlotlib), as well as some cluster parallelization (ipyparallel)}.
+\cventry{Oct'17-Oct'18}{System Administrator}{UCM: Department of Compuer Architecture and Automatics}{Madrid}{}{Administrated multiple Linux systems and maintained the physical and virtualized infraestructure (kvm).}
+\cventry{Nov'16-Jun'17}{Collaboration fellowship by Spanish MECD}{Seven months researching and working for the Department of Computer Architecture and Automatics}{}{Madrid}{}{}
+\cventry{Apr'16-Aug'16}{Internship in Software Developement}{SATEC}{Madrid}{}{Developed web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application for the government car management system.}
 
-% \section{Master thesis}
-% \cvitem{title}{\emph{Title}}
-% \cvitem{supervisors}{Supervisors}
-% \cvitem{description}{Short thesis abstract}
+\section{Research articles}
+\begin{itemize}
+\item Garcia-Garcia, A., Saez, J.C., Prieto, M.: "Delivering Fairness on Asymmetric Multicore Systems via Contention-Aware Scheduling". 5th Workshop on Runtime and Operating Systems for the Many-core Era. Euro-Par 2017: Parallel Processing Workshops. Springer International Publishing 2018. 610—622. 
+\smallskip
+\item Garcia-Garcia, A., Saez, J.C., Prieto, M.: “Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems”. IEEE Transactions on Computers, 67 (12): 1703-1719. (2018). IF (JCR): 3.131. ISSN: 0018-9340; DOI: 10.1109/TC.2018.2836418. Impact index of \textbf{JCR Q1} by Computer Science, Hardware and Architecture (2018).
+\smallskip
+\item Presented this article in the ICPP 2019 that took place in Kyoto: Garcia-Garcia, A., Saez, J.C., Castro, F. Prieto-Matias, M.: “LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores”. In Proceedings of the 48th International Conference on Parallel Processing (ICPP '19): 14:1-14:10. (2019).  ISBN: 978-1-4503-6295-5; DOI: 10.1145/3337821.3337925. \textbf{Ranked Class II} in GII-GRIN-SCIE (2018)
+\smallskip
+\item Garcia-Garcia, A., Saez, J.C., Risco-Martin, J.L., Prieto, M.. “PBBCache: An open-source parallel simulator for rapid prototyping and evaluation of cache-partitioning and cache-clustering policies”. Journal of Computational Science, 42:101102, 2020. https://doi.org/10.1016/j.jocs.2020.101102. Impact index of \textbf{JCR Q1} by Computer Science, Theory and Methods (2020). Available on https://github.com/pbbcache/cachesim
+\end{itemize}
+
+
 \section{Achievements}
-\cventry{June, 2016}{Graduated with special mention in the Final Project}{Complutense University of Madrid}{}{}{\begin{itemize}
-\item \textbf{Title}: Operating system support for improving energy efficiency in asymmetric multicore systems.
-\item \textbf{Director}: Juan Carlos Sáez Alcaide.
-\item \textbf{Department of Computer architecture and automatic}.
-\end{itemize}}
-\cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{Complutense University of Madrid}{}{}{\begin{itemize}
+\cventry{December, 2021}{Obtained my PhD with cum laude mention}{}{}{}{}
+\cventry{June, 2016}{Graduated with special mention in the Final Project of my Bachelor's Degree}{}{}{}{}
+\cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{}{}{}{\begin{itemize}
 \item Operating Systems
 \item Advanced Operating Systems and Networks
 \item Computer Architecture
@@ -101,77 +108,41 @@
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, April 2012.
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
 \end{itemize}
-\item English courses with native teachers in Dicken's academy (Madrid, 2011 and 2015).
-\item Stayed one month with a foster family in Athenry (Ireland) while I studied an intensive english course (August 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificate}}.
 \end{itemize}}
-\cventry{Nov. 2016}{Course in Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
+\cventry{Nov. 2016}{Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
+
+
 \section{Other skills}
-\cventry{}{Technologies:}{}{}{}{\begin{itemize}
-\item \textbf{Python}
-\begin{itemize}
-  \item Pandas
-  \item Numpy
-  \item Matplotlib
-  \item Telegram API
-\end{itemize}
-\item \textbf{C}
-\begin{itemize}
-  \item Linux kernel modules
-  \item OpenMPI
-\end{itemize}
-\item \textbf{C++}
-\begin{itemize}
-  \item OpenMP
-  \item OpenGL
-\end{itemize}
-\item \textbf{C\#}
-\begin{itemize}
-  \item ASP.NET MVC
-  \item Razor
-  \item jQuery UI
-\end{itemize}
-\item \textbf{Java}
-\begin{itemize}
-  \item Hibernate
-  \item JSP
-  \item Maven
-\end{itemize}
-\medskip
-\item \textbf{Databases}
+\cventry{}{Programming languages}{}{}{}{\begin{itemize}
+\item \textbf{Python}: scikit-learn, pandas, numpy, matplotlib, ipyparallel.
+\smallskip
+\item \textbf{C/C++}: Kernel modules (drivers/scheduling), OpenGL, OpenMP/MPI, Sockets.
+\smallskip
+\item \textbf{Java}: Android app developement ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}}), Hibernate, JSP, Maven.
+\smallskip
+\item \textbf{Web}: PHP, C\# ASP.NET MVC (Razor), JavaScript, CSS (Boostrap).
+\smallskip
+\item \textbf{Functional Programming}: Erlang, Maude.
+\smallskip\end{itemize}}
+\cventry{}{Other technologies}{}{}{}{\begin{itemize}
+\item \textbf{Databases}: SQL, MongoDB, Neo4J.
+\smallskip
+\item \textbf{Big Data}: Spark, Map Reduce, Hadoop File System.
+\smallskip\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{python implementations}}):
   \begin{itemize}
-  \item SQL
-  \item MongoDB
-  \item Neo4J
-  \item XML
-\end{itemize}
-\medskip
-\item \textbf{Big Data}
-\begin{itemize}
-  \item Map Reduce
-  \item Spark
-\end{itemize}
-\item \textbf{PHP}
-\item \textbf{JavaScript} (jQuery)
-\item \textbf{CSS} (Boostrap)
-\item \textbf{Bash}
-\medskip
-\end{itemize}}
-\cventry{}{Projects:}{}{}{}{\begin{itemize}
-\item \textbf{Android app.} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
-\medskip
-\item \textbf{Embedded systems.} Double authentication system with RFID and password using 2 Arduino Uno boards and a Raspberry Pi 2 ({\color{blue}\href{https://github.com/mizadri/sed-raspduino}{repository}}). 
-\medskip
-\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{python implementations}}):
-  \begin{itemize}
-    \item ID3 classification trees.
-    \item Complete Index (Data compression using variable-bytes, elias-gamma or elias-delta).
+    \item Classification trees (ID3).
+    \item Complete Index (data compression: variable-bytes, elias-gamma or elias-delta).
     \item Vectorial Index.
     \item Naive Bayes.
   \end{itemize}
-\medskip
-\item \textbf{LaTeX for Scientific papers and reports} ({\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgdng1eHFyU1JPY1U}{Final Project}} or {\color{blue}\href{https://github.com/mizadri/LaTeX}{this CV}})
-\medskip
-\item \textbf{Version control software} ({\color{blue}\href{https://github.com/mizadri/}{GitHub profile}})
+\item \textbf{Network management and virtualization}
+\begin{itemize}
+  \item Persistent network configuration IPv4/IPv6 (\textit{vtysh}).
+  \item Virtual machine management in servers with kvm (\textit{virsh} y \textit{virt-manager}).
+  \item Basic usage of docker to create and deploy images.
+  \item Firewall deployment and network analysis skills (wireshark/IDS)
+\end{itemize}
+\smallskip
 \end{itemize}}
 
 
