--- a/spanish-cv/curriculum-vitae.tex
+++ b/spanish-cv/curriculum-vitae.tex
@@ -30,10 +30,9 @@
 % personal data
 \name{Adrián}{García García}
 \title{Curriculum vitae}                               % optional, remove / comment the line if not wanted
-\address{C/Diligencia 4, D 4ºB}{28018 Madrid}{España}% optional, remove / comment the line if not wanted; the "postcode city" and "country" arguments can be omitted or provided empty
 \phone[mobile]{639570909}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
-\email{adriagar@ucm.es}                               % optional, remove / comment the line if not wanted
+\email{mizadri.gg@gmail.com}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
 \social[linkedin]{Adrián García García}                        % optional, remove / comment the line if not wanted
 %\social[twitter]{jdoe}                             % optional, remove / comment the line if not wanted
@@ -63,7 +62,7 @@
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
 \cventry{2011--2016}{Grado en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 7,82}}{} % arguments 3 to 6 can be left empty
 \cventry{2016--2018}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 8,9}}{}
-\cventry{2017--actualidad}{Doctorando en Ingeniería Informática}{DACYA}{Madrid}{}{Contrato predoctoral UCM de personal investigador en formación.}
+\cventry{2017--actualidad}{Doctorando en Ingeniería Informática (cum laude)}{UCM}{Madrid}{\textit{Sobresaliente cum laude}}{}
 
 % \section{Master thesis}
 % \cvitem{title}{\emph{Title}}
@@ -75,14 +74,16 @@
 \cventry{Abr. 2016- Ago. 2016}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
 \cventry{Nov. 2016- Marzo 2017.}{Beca de colaboración con departamentos}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos. Otorgada por el Ministerio de Educación, Cultura y Deporte.}
 \cventry{Feb. 2017- Marzo 2017.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
+\cventry{Oct. 2017- Diciembre 2021.}{Contrato predoctoral UCM de personal investigador en formación.}{DACYA}{Madrid}{}{Investigación sobre planificación de tareas y particionado de cache, trabajando tanto en C a bajo nivel, como en python para el análisis de resultados (extracción de métricas y conclusiones con jupyter/pandas/matplotlib).}
 
+\cventry{Contrato predoctoral UCM de personal investigador en formación.}
 \section{Artículos de investigación}
 \begin{itemize}
 \item A. Garcia-Garcia, J. C. Saez, and M. Prieto-Matias. 2017. "Delivering Fairness on Asymmetric Multicore Systems via Contention-Aware Scheduling". 5th Workshop on Runtime and Operating Systems for the Many-core Era. Euro-Par 2017: Parallel Processing Workshops. Springer International Publishing 2018. 610—622.
 \smallskip
 \item A. Garcia-Garcia, J. C. Saez, and M. Prieto-Matias. 2018. "Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems". IEEE Transactions on Computers. 67, 12 (Dec 2018), 1703–1719.
 \smallskip
-\item (Ponente) A. Garcia-Garcia, J. C. Saez, F. Castro, M. Prieto-Matias. 2019. "LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores". In Proceedings of the 48th International Conference on Parallel Processing (ICPP 2019).
+\item (Ponente) A. Garcia-Garcia, J. C. Saez, F. Castro, M. Prieto-Matias. 2019. "LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores". In Proceedings of the 48th International Conference on Parallel Processing (Kyoto, 2019).
 \end{itemize}
 
 \section{Premios}
