--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -106,7 +106,7 @@
 \item Cambridge certificates:
 \begin{itemize}
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, April 2012.
-  \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
+  \item {\color{blue}\href{https://drive.google.com/file/d/1_h3REEXMckyocpT5TWbLwuan3GDR8xQ9/view?usp=sharing}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
 \end{itemize}
 \end{itemize}}
 \cventry{Nov. 2016}{Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
