Added MonetDB position

--- a/english-cv/curriculum-vitae.tex
+++ b/english-cv/curriculum-vitae.tex
@@ -30,7 +30,7 @@
 % personal data
 \name{Adrian}{Garcia Garcia}
 \title{Curriculum vitae}                               % optional, remove / comment the line if not wanted
-\phone[mobile]{639570909}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
+\phone[mobile]{+34639570909}                   % optional, remove / comment the line if not wanted; the optional "type" of the phone can be "mobile" (default), "fixed" or "fax"
 %\phone[fixed]{+2~(345)~678~901}
 \email{mizadri.gg@gmail.com}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
@@ -58,7 +58,7 @@
 %-----       resume       ---------------------------------------------------------
 \makecvtitle
 
-\section{Description} I am a highly curious and passion driven individual that is always looking to grow as a professional and as a person. My dream job offers interesting technical challenges that are faced through teamwork and allow me to learn new technologies, where my researching and learning skills could be useful. No matter the place I can find a way there, specially if the software we create actually makes a difference.
+\section{Description} I am a highly curious and passion driven individual that is always looking to grow as a professional and as a person. My dream job offers interesting technical challenges that are faced through teamwork and where the software we create actually makes a difference. Specially interested in diving into the Machine Learning and Security fields where I hope to transfer my researching skills to create great products.
 
 \section{Education}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
@@ -68,15 +68,14 @@
 
 \section{Employment history}
 % \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{Apr'18-Dec'21}{PhD scolarship (UCM)}{Department of Compuer Architecture and Automatics}{Madrid}{}{"Contention-aware scheduling and resource management for emerging multicore architectures": the main proposals were implemented in C Linux kernel modules, but most of the experimental analysis and performance metrics was done in python (pandas/matlotlib), as well as some cluster parallelization (ipyparallel)}.
+\cventry{Mar'21-Now}{Backend Software Developer}{MonetDB Solutions}{Amsterdam}{}{I am mostly devoted to query optimization and benchmarking our columnar database system versus other relevant SQL players like Postgres, MySQL or Clickhouse. I also work with docker to test deployment to cloud platforms and how different DBs perform when virtualized.}.
+\cventry{Apr'18-Dec'21}{PhD scolarship (UCM)}{Department of Compuer Architecture and Automatics}{Madrid}{}{"Contention-aware scheduling and resource management for emerging multicore architectures": the main proposals were implemented in Linux kernel modules (C), but most of the experimental analysis and performance metrics was done in python (pandas/matlotlib), as well as some cluster parallelization (ipyparallel)}.
 \cventry{Oct'17-Oct'18}{System Administrator}{UCM: Department of Compuer Architecture and Automatics}{Madrid}{}{Administrated multiple Linux systems and maintained the physical and virtualized infraestructure (kvm).}
 \cventry{Nov'16-Jun'17}{Collaboration fellowship by Spanish MECD}{Seven months researching and working for the Department of Computer Architecture and Automatics}{}{Madrid}{}{}
 \cventry{Apr'16-Aug'16}{Internship in Software Developement}{SATEC}{Madrid}{}{Developed web applications in C\# (.NET MVC), Razor and jQuery UI. Specifically, I contributed to build a web application for the government car management system.}
 
 \section{Research articles}
 \begin{itemize}
-\item Garcia-Garcia, A., Saez, J.C., Prieto, M.: "Delivering Fairness on Asymmetric Multicore Systems via Contention-Aware Scheduling". 5th Workshop on Runtime and Operating Systems for the Many-core Era. Euro-Par 2017: Parallel Processing Workshops. Springer International Publishing 2018. 610—622. 
-\smallskip
 \item Garcia-Garcia, A., Saez, J.C., Prieto, M.: “Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems”. IEEE Transactions on Computers, 67 (12): 1703-1719. (2018). IF (JCR): 3.131. ISSN: 0018-9340; DOI: 10.1109/TC.2018.2836418. Impact index of \textbf{JCR Q1} by Computer Science, Hardware and Architecture (2018).
 \smallskip
 \item Presented this article in the ICPP 2019 that took place in Kyoto: Garcia-Garcia, A., Saez, J.C., Castro, F. Prieto-Matias, M.: “LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores”. In Proceedings of the 48th International Conference on Parallel Processing (ICPP '19): 14:1-14:10. (2019).  ISBN: 978-1-4503-6295-5; DOI: 10.1145/3337821.3337925. \textbf{Ranked Class II} in GII-GRIN-SCIE (2018)
@@ -88,16 +87,7 @@
 \section{Achievements}
 \cventry{December, 2021}{Obtained my PhD with cum laude mention}{}{}{}{}
 \cventry{June, 2016}{Graduated with special mention in the Final Project of my Bachelor's Degree}{}{}{}{}
-\cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{}{}{}{\begin{itemize}
-\item Operating Systems
-\item Advanced Operating Systems and Networks
-\item Computer Architecture
-\item Linux and Android Internals
-\item Computer Networks Security
-\item Mobile and multicore parallel programming
-\item Databases
-\item Evaluation of Computer Systems
-\end{itemize}}
+\cventry{2011--2016}{Subjects passed with honors on the Bachelor's Degree in Computer Science Engineering}{}{}{}{Operating Systems, Advanced Operating Systems and Networks, Computer Architecture, Linux and Android Internals, Computer Networks Security, Mobile and multicore parallel programming, Databases and Evaluation of Computer Systems}
 
 
 \section{Additional information}
@@ -109,7 +99,7 @@
   \item {\color{blue}\href{https://drive.google.com/file/d/1_h3REEXMckyocpT5TWbLwuan3GDR8xQ9/view?usp=sharing}{Certificate in Advanced English}} (CAE), Madrid, September 2016.
 \end{itemize}
 \end{itemize}}
-\cventry{Nov. 2016}{Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM that teached to gather data from web pages, Twitter and different file formats (csv, xls, txt, etc.) in order to parse them and work with them using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
+\cventry{Nov. 2016}{Big Data: analysis with python}{Complutense University of Madrid}{}{}{Continious formation course of the UCM on web scraping from Twitter and different file formats and data manipulation using python libraries: numpy, matplotlib and pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificate}}.}
 
 
 \section{Other skills}
@@ -139,17 +129,11 @@
 \begin{itemize}
   \item Persistent network configuration IPv4/IPv6 (\textit{vtysh}).
   \item Virtual machine management in servers with kvm (\textit{virsh} y \textit{virt-manager}).
-  \item Basic usage of docker to create and deploy images.
+  \item Docker.
   \item Firewall deployment and network analysis skills (wireshark/IDS)
 \end{itemize}
 \smallskip
 \end{itemize}}
-
-
-\section{References}
-% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{}{Manuel Prieto Matías}{Associate Professor at Complutense Univerity of Madrid}{mpmatias@ucm.es}{Research group website {\color{blue}\href{https://artecs.dacya.ucm.es/}{(ArTeCs)}}}{}
-\cventry{}{Juan Carlos Sáez Alcaide}{Associate Professor at Complutense Univerity of Madrid}{jcsaezal@ucm.es}{Research group website {\color{blue}\href{https://artecs.dacya.ucm.es/}{(ArTeCs)}}}{}
 
 
 \nocite{*}
